gitops/prod/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: pred-prod
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: pred-api
          image: ghcr.io/werockstar/go-gitops:ca478100d72e17d40a066e3a1a63025bd3fb2383
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "0.5"
              memory: 256Mi
