gitops/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-website
  namespace: pred-prod
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: pred-prod.werockstar.dev
    http:
        paths:
            - path: /
              pathType: Prefix
              backend:
                  service:
                      name: api
                      port:
                          number: 80
